修改入口为MainActivity

--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CommentActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -16,5 +16,6 @@
         </activity>
         <activity android:name=".activity.NoLoginMineActivity"/>
         <activity android:name=".activity.RegisterActivity"/>
+        <activity android:name=".activity.CommentActivity"/>
     </application>
 </manifest>
