--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -14,8 +14,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.NoLoginMineActivity"/>
-        <activity android:name=".activity.RegisterActivity"/>
-        <activity android:name=".activity.CommentActivity"/>
+        <activity android:name=".activity.NoLoginMineActivity"/><!--没有登陆是我的页面-->
+        <activity android:name=".activity.RegisterActivity"/><!--注册页面-->
+        <activity android:name=".activity.CommentActivity"/><!---->
+        <activity android:name=".activity.MineCollectionActivity"/><!--我的收藏-->
+        <activity android:name=".activity.MineHomePageActivity"/><!--个人主页-->
     </application>
 </manifest>
