--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".activity.NoLoginMineActivity"/><!--没有登陆是我的页面-->
+        <activity android:name=".activity.RegisterActivity"/><!--注册页面-->
+        <activity android:name=".activity.CommentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".activity.NoLoginMineActivity"/><!--没有登陆是我的页面-->
-        <activity android:name=".activity.RegisterActivity"/><!--注册页面-->
-        <activity android:name=".activity.CommentActivity"/><!---->
+        </activity><!---->
         <activity android:name=".activity.MineCollectionActivity"/><!--我的收藏-->
         <activity android:name=".activity.MineHomePageActivity"/><!--个人主页-->
     </application>
