--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -8,14 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.HomePageActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.HomePageActivity"/>
+        <activity android:name=".activity.HotPotDetailsActivity"/>
         <activity android:name=".activity.NoLoginMineActivity"/>
         <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.CommentActivity"/>
+
     </application>
 </manifest>
