--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MineHomePageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,6 +18,11 @@
         <activity android:name=".activity.RegisterActivity"/><!--注册页面-->
         <activity android:name=".activity.CommentActivity"/><!---->
         <activity android:name=".activity.MineCollectionActivity"/><!--我的收藏-->
-        <activity android:name=".activity.MineHomePageActivity"/><!--个人主页-->
+        <activity android:name=".MainActivity"/><!--个人主页-->
+        <activity android:name=".activity.MineInformationActivity"/><!--我的资料-->
+        <activity android:name=".activity.Settingactivity"/><!--我的设置-->
+        <activity android:name=".activity.UseragreementActivity"/><!--用户协议-->
+        <activity android:name=".activity.AboutAppActivity"/><!--关于好吃宝-->
+        <activity android:name=".activity.UserAdviseActvity"/><!--用户反馈-->
     </application>
 </manifest>
