--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -13,13 +13,15 @@
         </activity>
         <activity android:name=".activity.NoLoginMineActivity"/><!--没有登陆是我的页面-->
         <activity android:name=".activity.RegisterActivity"/><!--注册页面-->
-        <activity android:name=".activity.CommentActivity">
+        <activity android:name=".activity.CommentActivity"/>
+        <activity android:name=".activity.ShopingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><!---->
+        </activity><!--娱乐-->
         <activity android:name=".activity.MineCollectionActivity"/><!--我的收藏-->
         <activity android:name=".activity.MineHomePageActivity"/><!--个人主页-->
+
     </application>
 </manifest>
