--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -19,5 +19,8 @@
         <activity android:name=".activity.CommentActivity"/><!---->
         <activity android:name=".activity.MineCollectionActivity"/><!--我的收藏-->
         <activity android:name=".activity.MineHomePageActivity"/><!--个人主页-->
+        <activity android:name=".activity.Guanzhu_listview"/><!--关注-->
+        <activity android:name=".activity.Tuijian_listview"/><!--推荐-->
+
     </application>
 </manifest>
