--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <!--<activity android:name=".activity.LoginActivity">-->
 
-        </activity>
+        <!--</activity>-->
         <activity android:name=".activity.NoLoginMineActivity"/><!--没有登陆是我的页面-->
         <activity android:name=".activity.RegisterActivity"/><!--注册页面-->
         <activity android:name=".activity.CommentActivity"/>
-        <activity android:name=".activity.EntertainmentActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,6 +22,14 @@
         </activity><!--娱乐-->
         <activity android:name=".activity.MineCollectionActivity"/><!--我的收藏-->
         <activity android:name=".activity.MineHomePageActivity"/><!--个人主页-->
+        <activity android:name=".activity.HomeViewPagerActivity"/>
+        <activity android:name=".activity.ShopingActivity"/>
+        <activity android:name=".activity.ParkingActivity"/>
+        <activity android:name=".activity.HotelActivity"/>
+        <activity android:name=".activity.RecommendActivity"/><!--热门推荐-->
+        <activity android:name=".activity.HotPotDetailsActivity"/><!--推荐详情-->
+
+
 
     </application>
 </manifest>
