我的推介实现动态适配

--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -21,10 +21,6 @@
         <activity android:name=".activity.MineCollectionActivity"/><!--我的收藏-->
         <activity android:name=".activity.MineHomePageActivity"/><!--个人主页-->
         <activity android:name=".activity.MineInformationActivity"/><!--我的资料-->
-        <activity android:name=".activity.GuanzhuListview"/><!--关注-->
-        <activity android:name=".activity.TuijianListview"/><!--推荐-->
-        <activity android:name=".activity.FindListview"/><!--发现-->
-        <activity android:name=".activity.MyTuijianListview"/><!--我的推荐-->
         <activity android:name=".activity.SearchActivity"/><!--搜索-->
         <activity android:name=".activity.Settingactivity"/><!--我的设置-->
         <activity android:name=".activity.AboutAppActivity"/><!--关于App-->
@@ -33,5 +29,8 @@
         <activity android:name=".activity.UserAdviseActvity"/>
         <activity android:name=".activity.ParkingActivity"/>
         <activity android:name=".activity.HomeViewPagerActivity"/><!--首页-->
+        <activity android:name=".activity.FindActivity"/><!--发现-->
+        <activity android:name=".activity.TuijianActivity"/><!--推荐-->
+        <activity android:name=".activity.GuanzhuActivity"/><!--关注-->
     </application>
 </manifest>
