--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name=".activity.UserAdviseActvity"/>
         <activity android:name=".activity.FindActivity"/><!--发现-->
         <activity android:name=".activity.MyRecommendActivity"/><!--我的推荐-->
+        <service android:name="com.amap.api.location.APSService"></service>
     </application>
 
 
