--- a/HaoChiBao/app/build.gradle
+++ b/HaoChiBao/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/AMap_Location_V3.1.0_20161027.jar')
+    compile files('libs/universal-image-loader-1.9.5.jar')
 }
