--- a/HaoChiBao/app/build.gradle
+++ b/HaoChiBao/app/build.gradle
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets{
+        main{
+            jniLibs.srcDirs=['libs']
+        }
+    }
+
+
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -27,4 +35,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/AMap_Location_V3.1.0_20161027.jar')
     compile files('libs/universal-image-loader-1.9.5.jar')
+    compile files('libs/weibosdkcore_release.jar')
+    compile files('libs/mta-sdk-1.6.2.jar')
+    compile files('libs/open_sdk_r5778.jar')
 }
