--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
         android:theme="@style/AppTheme">
         <meta-data android:name="com.amap.api.v2.apikey" android:value="20c065656a7289d56de0a5fcc6db70f1">//开发者申请的key
         </meta-data>
-
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="aetumvluZtsGCXqaM7PGTEn3mjGhqXdX" />
         <activity android:name=".activity.SplashActivity"><!--引导页面-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -65,6 +67,7 @@
         <activity android:name=".activity.FindActivity"/><!--发现-->
         <activity android:name=".activity.MyRecommendActivity"/><!--我的推荐-->
         <activity android:name=".activity.UserRegisterActivity"/><!--用户注册页面-->
+        <activity android:name=".activity.BaiduMapActivity"/><!--百度地图-->
         <service android:name="com.amap.api.location.APSService"></service><!--定位服务-->
 
 
