--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -20,11 +20,9 @@
     <!--用于申请调用A-GPS模块-->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
     <!--文件读取权限-->
-
-
-
-
-
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <!-- SD卡读取权限，用户写入离线定位数据-->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
@@ -69,6 +67,11 @@
         <activity android:name=".activity.UserRegisterActivity"/><!--用户注册页面-->
         <activity android:name=".activity.BaiduMapActivity"/><!--百度地图-->
         <service android:name="com.amap.api.location.APSService"></service><!--定位服务-->
+
+        <service android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote">
+        </service>
 
 
         <activity
