--- a/HaoChiBao/app/build.gradle
+++ b/HaoChiBao/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile files('libs/baidumapapi_search_v4_1_1.jar')
     compile files('libs/baidumapapi_util_v4_1_1.jar')
     compile files('libs/locSDK_6.13.jar')
+    compile files('libs/BaiduNaviSDK_3.2.0.jar')
 }
