--- a/HaoChiBao/app/build.gradle
+++ b/HaoChiBao/app/build.gradle
@@ -24,10 +24,16 @@ android {
         }
     }
 
-
+}
+repositories{
+    flatDir{
+        dirs 'libs'
+    }
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile name:'SMSSDK-2.1.3',ext:'aar'
+    compile name:'SMSSDKGUI-2.1.3',ext:'aar'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -46,4 +52,5 @@ dependencies {
     compile files('libs/baidumapapi_util_v4_1_1.jar')
     compile files('libs/locSDK_6.13.jar')
     compile files('libs/BaiduNaviSDK_3.2.0.jar')
+    compile files('libs/MobCommons-2016.1201.1839.jar')
 }
