--- a/HaoChiBao/app/build.gradle
+++ b/HaoChiBao/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'android-apt'
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.2"
@@ -32,8 +32,8 @@ repositories{
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile name:'SMSSDK-2.1.3',ext:'aar'
-    compile name:'SMSSDKGUI-2.1.3',ext:'aar'
+    compile name: 'SMSSDK-2.1.3', ext: 'aar'
+    compile name: 'SMSSDKGUI-2.1.3', ext: 'aar'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -53,4 +53,6 @@ dependencies {
     compile files('libs/locSDK_6.13.jar')
     compile files('libs/BaiduNaviSDK_3.2.0.jar')
     compile files('libs/MobCommons-2016.1201.1839.jar')
+    compile 'com.jakewharton:butterknife:8.0.1'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
