--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <!--用于获取运营商信息，用于支持提供运营商信息相关的接口-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <!--用于访问网络，网络定位需要上网-->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <!--用于申请调用A-GPS模块-->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
