之前天气接口没有认证，重新认证，定位接口出现appkey权限问题，修改了定位为重庆

--- a/HaoChiBao/app/src/main/AndroidManifest.xml
+++ b/HaoChiBao/app/src/main/AndroidManifest.xml
@@ -42,7 +42,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="20c065656a7289d56de0a5fcc6db70f1">//开发者申请的key
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="20c065656a7289d56de0a5fcc6db70f1">//开发者申请的key
         </meta-data>
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
