--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -2,11 +2,14 @@
 
 buildscript {
     repositories {
+
         jcenter()
+        maven{url 'https://jitpack.io'}
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
-
+        classpath 'com.github.BryanSharp:hibeaver:1.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
